--- a/src/django/package.json
+++ b/src/django/package.json
@@ -48,7 +48,7 @@
   "dev": "webpack-dev-server",
   "dependencies": {
     "@pybee/batavia": "~3.4.0-dev.12",
-    "bootstrap": "4.0.0-alpha.5",
+    "bootstrap": "4.1.3",
     "font-awesome": "4.7.0",
     "jquery": "^3.1.1",
     "webpack": "2.2.1"
